deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chihuo
  labels:
    app.kubernetes.io/part-of: chihuo
